<resources>
    <string name="app_name">抢了个抢</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab1">首页</string>
    <string name="tab2">版块</string>
    <string name="tab3">消息</string>
    <string name="tab4">我的</string>

    <string name="big_image_transition">bigImageTransition</string>

    <!--主页-->
    <string name="logout_dialog_title">退出登录</string>
    <string name="logout_dialog_content">确定退出登录？</string>

    <!--主页menu-->
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_check_in">签到</string>
    <string name="main_menu_has_check_in">已签到</string>
    <string name="main_menu_un_login">未登录</string>

    <!--Behavior-->
    <string name="post_scroll_behavior">com.cb.qiangqiang2.ui.view.behavior.PostScrollBehavior</string>
    <string name="floating_menu_scroll_behavior">com.cb.qiangqiang2.ui.view.behavior.FloatingMenuScrollBehavior</string>

    <!--侧边栏-->
    <string name="action_publish">发表</string>
    <string name="action_msg">消息</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_feedback">反馈</string>
    <string name="action_logout">退出登录</string>

    <string name="request_error">请求出错</string>
    <string name="title_activity_board_edit">板块编辑</string>
    <string name="title_activity_web">网页</string>
    <string name="title_activity_person_info">个人信息</string>
    <string name="check_in">签到</string>
    <string name="search">搜索</string>
    <string name="no_more_data">亲，到底了...囧rz</string>

    <string name="exit">再按一次退出程序。</string>
    <string name="board_edit">板块编辑</string>

    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="other_board">其他板块</string>
    <string name="my_board">我的板块</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>

    <string name="title_activity_login">登录</string>

    <!--Dialog-->
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>

    <!--用户信息页面-->
    <string name="user_info_post">发表</string>
    <string name="user_info_participate">参与</string>
    <string name="user_info_collection">收藏</string>
    <string name="user_info_attention">关注</string>
    <string name="user_info_fans">粉丝</string>
    <string name="user_info_friend">好友</string>
    <string name="user_info_credit">积分：%d</string>
    <string name="user_info_gold">金币：%d</string>
    <string name="user_info_silver">银币：%d</string>

    <!--用户列表页-->
    <string name="user_list_no_signature">这个人很懒，什么都没有留下~</string>
    <string name="user_list_followed">取消关注</string>
    <string name="user_list_not_followed">关注</string>

    <!-- 登录 -->
    <string name="login_title">登录抢抢网</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_username">用户名格式不正确(3-15个字符)</string>
    <string name="error_invalid_password">密码格式不正确(至少7个字符，包含数字和小写字符或特殊符号)</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="login_error">登录失败</string>
    <string name="username_empty">用户名为空</string>
    <string name="password_empty">密码为空</string>

    <!--搜索-->
    <string name="search_hint">搜索帖子或用户</string>

    <!--帖子详情-->
    <string name="post_detail_floor">%d楼</string>
    <string name="post_detail_publisher">楼主</string>
    <string name="post_detail_open_with_browser">浏览器打开</string>
    <string name="post_detail_order_ascending">正序排序</string>
    <string name="post_detail_order_descending">倒序排序</string>
    <string name="post_detail_reply">回复</string>
    <string name="post_detail_collection">收藏</string>
    <string name="post_detail_cancel_collection">取消收藏</string>
    <string name="post_detail_collection_success">收藏成功</string>
    <string name="post_detail_cancel_collection_success">取消收藏成功</string>

    <!--设置-->
    <string name="setting_title">设置</string>
    <string name="setting_night_theme">夜间模式</string>
    <string name="setting_auto_sign">自动签到</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_clear_cache_dialog_title">清除缓存</string>
    <string name="setting_clear_cache_dialog_content">确定清除缓存？</string>
    <string name="setting_clear_cache_success">清除缓存成功</string>

    <!--图片列表-->
    <string name="image_list_indicator">%1$d/%2$d</string>

    <!--webview-->
    <string name="webview_menu_open_with_browser">浏览器打开</string>

    <!--emoji start-->
    <string name="mc_forum_face_haha">[哈哈]</string>
    <string name="mc_forum_face_tear">[泪]</string>
    <string name="mc_forum_face_crazy">[抓狂]</string>
    <string name="mc_forum_face_xixi">[嘻嘻]</string>
    <string name="mc_forum_face_titter">[偷笑]</string>
    <string name="mc_forum_face_clap">[鼓掌]</string>
    <string name="mc_forum_face_fury">[怒]</string>
    <string name="mc_forum_face_heart">[心]</string>
    <string name="mc_forum_face_heart_broken">[心碎了]</string>
    <string name="mc_forum_face_sick">[生病]</string>
    <string name="mc_forum_face_love">[爱你]</string>
    <string name="mc_forum_face_shy">[害羞]</string>
    <string name="mc_forum_face_poor">[可怜]</string>
    <string name="mc_forum_face_greedy">[馋嘴]</string>
    <string name="mc_forum_face_faint">[晕]</string>
    <string name="mc_forum_face_hana">[花心]</string>
    <string name="mc_forum_face_too_happy">[太开心]</string>
    <string name="mc_forum_face_kiss">[亲亲]</string>
    <string name="mc_forum_face_disdain">[鄙视]</string>
    <string name="mc_forum_face_hehe">[呵呵]</string>
    <string name="mc_forum_face_booger">[挖鼻屎]</string>
    <string name="mc_forum_face_decline">[衰]</string>
    <string name="mc_forum_face_rabbit">[兔子]</string>
    <string name="mc_forum_face_good">[good]</string>
    <string name="mc_forum_face_come">[来]</string>
    <string name="mc_forum_face_force">[威武]</string>
    <string name="mc_forum_face_circusee">[围观]</string>
    <string name="mc_forum_face_sprout">[萌]</string>
    <string name="mc_forum_face_flowers">[送花]</string>
    <string name="mc_forum_face_confused">[囧]</string>
    <string name="mc_forum_face_cruel">[酷]</string>
    <string name="mc_forum_face_solid_food">[糗大了]</string>
    <string name="mc_forum_face_mouth">[撇嘴]</string>
    <string name="mc_forum_face_asleep">[发呆]</string>
    <string name="mc_forum_face_sweat">[汗]</string>
    <string name="mc_forum_face_sleep">[睡]</string>
    <string name="mc_forum_face_surprise">[吃惊]</string>
    <string name="mc_forum_face_white_eye">[白眼]</string>
    <string name="mc_forum_face_white_query">[疑问]</string>
    <string name="mc_forum_face_cattiness">[阴险]</string>
    <string name="mc_forum_face_left_humph">[左哼哼]</string>
    <string name="mc_forum_face_right_humph">[右哼哼]</string>
    <string name="mc_forum_face_knock">[敲打]</string>
    <string name="mc_forum_face_chagrin">[委屈]</string>
    <string name="mc_forum_face_hush">[嘘]</string>
    <string name="mc_forum_face_spit">[吐]</string>
    <string name="mc_forum_face_grimace">[做鬼脸]</string>
    <string name="mc_forum_face_bye">[ByeBye]</string>
    <string name="mc_forum_face_cry">[要哭了]</string>
    <string name="mc_forum_face_arrogance">[傲慢]</string>
    <string name="mc_forum_face_moon">[月亮]</string>
    <string name="mc_forum_face_sun">[太阳]</string>
    <string name="mc_forum_face_ye">[耶]</string>
    <string name="mc_forum_face_handshake">[握手]</string>
    <string name="mc_forum_face_ok">[ok]</string>
    <string name="mc_forum_face_coffee">[咖啡]</string>
    <string name="mc_forum_face_meal">[饭]</string>
    <string name="mc_forum_face_gift">[礼物]</string>
    <string name="mc_forum_face_pig_head">[猪头]</string>
    <string name="mc_forum_face_hug">[抱抱]</string>
    <string name="mc_forum_face_praise">[赞]</string>
    <string name="mc_forum_face_hold">[Hold]</string>
    <string name="mc_forum_face_sleipnir">[神马]</string>
    <string name="mc_forum_face_cheating">[坑爹]</string>
    <string name="mc_forum_face_have">[有木有]</string>
    <string name="mc_forum_face_thanks">[谢谢]</string>
    <string name="mc_forum_face_demon">[魔鬼]</string>
    <string name="mc_forum_face_saucer_man">[外星人]</string>
    <string name="mc_forum_face_blue_heart">[蓝心]</string>
    <string name="mc_forum_face_purple_heart">[紫心]</string>
    <string name="mc_forum_face_yellow_heart">[黄心]</string>
    <string name="mc_forum_face_green_heart">[绿心]</string>
    <string name="mc_forum_face_music">[音符]</string>
    <string name="mc_forum_face_flicker">[闪烁]</string>
    <string name="mc_forum_face_star">[星星]</string>
    <string name="mc_forum_face_drip">[雨滴]</string>
    <string name="mc_forum_face_flame">[火焰]</string>
    <string name="mc_forum_face_shit">[便便]</string>
    <string name="mc_forum_face_foot">[踩一脚]</string>
    <string name="mc_forum_face_rain">[下雨]</string>
    <string name="mc_forum_face_cloudy">[多云]</string>
    <string name="mc_forum_face_lightning">[闪电]</string>
    <string name="mc_forum_face_snowflake">[雪花]</string>
    <string name="mc_forum_face_cyclone">[旋风]</string>
    <string name="mc_forum_face_bag">[包]</string>
    <string name="mc_forum_face_house">[房子]</string>
    <string name="mc_forum_face_fireworks">[烟花]</string>
    <!--emoji end-->

</resources>
