<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/board_drag_item_title_height">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/board_drag_item_title_padding_top"
        android:layout_marginLeft="@dimen/padding_left"
        android:text="@string/my_board"
        android:textSize="@dimen/text_size2"
        android:textColor="@color/text_primary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_content"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/tv_content"
        android:text="@string/tip_drag"
        android:textColor="@color/text_second_primary"
        android:textSize="@dimen/text_size6"/>

    <TextView
        android:id="@+id/tv_btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/padding_right"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="center"
        android:background="@drawable/bg_red_line"
        android:textSize="@dimen/text_size7"
        android:textColor="@color/red_500"
        android:layout_alignBottom="@id/tv_content"
        android:text="@string/edit"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/divider_color"/>
</RelativeLayout>