<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <include layout="@layout/toolbar_layout"/>

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size2"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_primary"
                    android:text="@string/setting_night_theme"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_night"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textOff="OFF"
                    android:textOn="ON"
                    android:paddingLeft="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size2"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_primary"
                    android:text="@string/setting_auto_sign"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_auto_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textOff="OFF"
                    android:textOn="ON"
                    android:paddingLeft="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/base_bg_grey"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:paddingLeft="@dimen/padding_left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size2"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_primary"
                    android:text="@string/setting_clear_cache"/>

                <TextView
                    android:id="@+id/tv_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="@dimen/padding_right"
                    android:textSize="@dimen/text_size2"
                    android:textColor="@color/text_primary"
                    tools:text="33.33M"
                    android:layout_centerVertical="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/right_btn"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/base_bg_grey"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/base_bg_grey"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
